# wildlife-streaming-e2e

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
app/: settings.py  specie_map_traits.py
app/components/simulator/: initialize.py  locations.py  pack_behavior.py
app/components/utils/: geo_helper.py  logging.py  randomize.py
app/model/: animal.py  collar.py  enum.py  location.py  pack.py  pack_log.py  specie_traits.py  tracker.py  wolf.py
app/model/enum/: animal.py  species.py
app/server/: lifespan.py  main.py  routes.py
app/server/background/: lifecycle_animal_update.py  move_update.py  movement_update.py
app/simulator/: move.py  remove.py  spawn.py
backend/: Dockerfile.backend  pyproject.toml  settings.py  specie_map_traits.py
backend/db/: db_init.py  db_manage.py  operations.py  tables.py
backend/event/: move.py  remove.py  spawn.py
backend/model/: animal.py  specie_traits.py  tracker.py
backend/model/enum/: tracker.py
backend/models/: animal.py  event.py  specie_map_traits.py  tracker.py
backend/scripts/: init-debezium-user.sh  register-connector.sh
backend/server/: lifespan.py  main.py  routes.py
backend/server/background/: lifecycle_animal_update.py  move_update.py
backend/simulator/: cycles.py  events.py  geo.py  move_cycle.py  spawn_cycle.py
backend/simulator/event/: move.py  remove.py  spawn.py
backend/simulator/model/: animal.py  specie_traits.py  tracker.py
backend/simulator/model/enum/: gender.py
clickhouse/: init.sql
dashboard/: map.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/foundation/: d_animals.sql  d_tracker_locations.sql  d_trackers.sql  f_movement.sql
dbt/models/mart/: f_animal_summary.sql
dbt/models/source/landing/: source.yml
dbt/models/staging/: cdc_events.sql  cdc_trackers.sql
dbt/models/staging/cdc/: cdc_animals.sql  cdc_events.sql  cdc_trackers.sql
frontend/: Dockerfile.backend  Dockerfile.frontend  main.py  pyproject.toml  tooltip.py
frontend/pages/: event_page.py  home_page.py  summary_page.py  trailmap_page.py
frontend/utils/: db.py
kafka/: Dockerfile.debezium
kafka/scripts/: register-clickhouse-sink.sh  register-connector.sh
kafka/templates/: clickhouse-sink.template.json  kafka-connector.template.json
orchestrator/: .gitignore  Dockerfile.dagster  alerts.py  assets.py  definitions.py  jobs.py  project.py  pyproject.toml  schedules.py  sensors.py
simulator/: specie_map_traits.py
simulator/event/: move.py  remove.py  spawn.py
simulator/model/: animal.py  specie_traits.py  tracker.py
simulator/model/enum/: travel_mode.py
simulator/server/: lifespan.py  main.py  routes.py
simulator/server/background/: lifecycle_animal_update.py  move_update.py
