[project]
name = "wildlife-backend"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "faker>=37.4.0",
    "fastapi>=0.115.13",
    "mypy>=1.16.1",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.41",
    "types-requests>=2.32.4.20250611",
    "uvicorn>=0.34.3",
]

[tool.setuptools.packages.find]
where = ["."]
