[project]
name = "wildlife-orchestrator"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "dagster>=1.11.2",
    "dagster-dbt>=0.27.2",
    "dagster-webserver>=1.11.2",
    "dbt-clickhouse>=1.9.2",
]

[tool.dagster]
module_name = "orchestrator.definitions"

[tool.setuptools.packages.find]
where = ["."]
